--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "50scoreyumi",
+  "name": "what good credit score",
   "theme": "syntax",
   "version": "0.1.0",
   "description": "what good credit score ◄ Get Your FREE Credit Score what good credit score, Check Your Credit For Free. Get My Credit Score For Free. Start Here Today",
